config du jenkinsfile

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,11 @@
     <packaging>war</packaging>
     <description>Demo LN Event base</description>
 
+
     <properties>
-        <java.version>11</java.version>
+	   <java.version>11</java.version>
+        <finalName>lnevent-${project.artifactId}-${project.version}</finalName>
+        <baseDir>./target/</baseDir>
     </properties>
 
     <dependencies>
@@ -72,6 +75,7 @@
     </dependencies>
 
     <build>
+	<finalName>${finalName}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
